--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="cards">
 	<div class="card-white">
 		<h2>Musée des Beaux Arts de Montréal</h2>
-			<img src="img-de-musées/mbam-expos.png">
+			<img src="img-de-musées/mbam-expos.PNG">
 			<p>Le Musée des Beaux Arts de Montréal présente cinq de leurs expos en ligne. Dommage qu'on n'entende pas l'accent en lisant les textes de l'expo.</p>
 
 			<p>J'ai déjà rempli le formulaire pour t'éviter de donner ton adresse mail si tu veux: solenn-solenn@protonmail.com (mon adresse pour les spams :)</p>
@@ -47,7 +47,7 @@
 
 	<div class="card-white">
 		<h2>La Monnaie de Paris</h2>
-			<img src="img-de-musées/kiki.png">
+			<img src="img-de-musées/kiki.PNG">
 			<p>Évade-toi dans l'univers syncrétique de Kiki Smith!</p>
 			<p>Kiki Smith est une artiste américaine contemporaine dont l'œuvre figurative explore une série de thèmes liés à la condition humaine : spiritualité, mortalité, féminité et sexualité. Elle est fascinée par l'anatomie du corps humain et la régénération. "Je crois toujours que toute l'histoire du monde se trouve dans notre corps", a dit un jour Smith.</p>
 			<a href="https://artsandculture.google.com/exhibit/wALyyfRKzmkeJQ" target="_blank" class="button-blue" >Miss! Miss Kiki Smith!</a>
